--- a/Public/html/loginPage.html
+++ b/Public/html/loginPage.html
@@ -149,7 +149,7 @@
 </div>
 <!-- ///////////////////////////////// -->
 <h3 id="checker1"> </h3>
-<a href="#" class = 'button-0' onclick="signOut();">Sign out</a>
+<!-- <a href="#" class = 'button-0' onclick="signOut();">Sign Out</a> -->
 
 </div>
 <!-- ////////////////////////////////////////////////// -->
@@ -184,12 +184,6 @@
     <div class="ui message">
      <div class="ui fluid large teal submit button"><a href="guestBoard.html"> Play as Guest</a></div>
       New to us? <a href="#">Sign Up</a>
-    </div>
-
-    <div class="ui message">
-      Sign in with Google 
-      <br> <br>
-      <center><div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"><center>
     </div>
   </div>
 </div>
